--- a/sample-viewer/src/app/patient-page/patient-page.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-page.component.scss
@@ -109,10 +109,6 @@
   }
 }
 
-.patient-changelog {
-  width: 100%;
-  justify-content: space-between;
-}
 
 .panel-group {
   margin-bottom: 10px !important;
@@ -136,13 +132,9 @@
   color: $grey-500;
   font-weight: 300;
   font-size: 1.15em;
+  align-items: center;
 }
 
-.view-changes {
-  font-size: 1em;
-  padding: 0;
-  line-height: 2em;
-  margin-left: 5px;
-  color: $ebola-md;
-  background: lighten($ebola-lt, 12%)
+.data-title {
+  margin-bottom: 0.5em;
 }
