--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -18,6 +18,12 @@ body {
   flex-wrap: wrap;
 }
 
+.container-justified {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .container-column {
   display: flex;
   flex-wrap: wrap;
@@ -620,6 +626,7 @@ th.mat-header-cell {
 .embargoed-icon {
   background: $grey-400;
   background: accent-redder(A400);
+  color: accent-redder(300);
   padding: 5px;
   color: white;
   border-radius: 4px;
