--- a/sample-viewer/src/app/provenance/provenance.component.html
+++ b/sample-viewer/src/app/provenance/provenance.component.html
@@ -14,9 +14,25 @@
     </div>
   </div>
 
-  <div class="source" *ngIf="source">
-    <span class="variable-label">source: </span>
-    <span class="variable-value">{{source}}</span>
+  <div class="container source-container">
+    <div class="container-column source-group">
+      <div class="source" *ngIf="source">
+        <span class="variable-label">source: </span>
+        <span class="variable-value">{{source}}</span>
+      </div>
+
+      <app-format-citation [citations]="citation" verbosity="basic" class="citation" *ngIf="citation"></app-format-citation>
+    </div>
+
+    <div class="source-icon container" *ngIf="cvisb_data || public_data" [ngClass]="cvisb_data ? 'cvisb-data' : public_data ? 'public-data' : ''">
+      <ng-container *ngIf="cvisb_data; else public_data">
+        <svg-icon icon="cvisb" class="cvisb-icon"></svg-icon>
+        <span class="source-tag">data</span>
+      </ng-container>
+      <ng-template #public_data>
+        <span class="source-tag">public data</span>
+      </ng-template>
+    </div>
   </div>
 
 </div>
