--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -31,10 +31,7 @@
       <mat-expansion-panel class="panel-group" id="panel--demographics" [expanded]="demographicsPanelState" (opened)="demographicsPanelState = true" (closed)="demographicsPanelState = false">
         <mat-expansion-panel-header [collapsedHeight]="expansionPanelHeight" [expandedHeight]="expansionPanelHeight" class="panel-header">
           <mat-panel-title class="panel-title">
-            <span class="container-justified">
-              Demographics
-              <i class="fas fa-stopwatch embargoed-icon header-icon" matTooltip="embargoed data; do not share"></i>
-            </span>
+            <app-provenance-title title="Demographics" [embargoed]="true"></app-provenance-title>
           </mat-panel-title>
         </mat-expansion-panel-header>
 
@@ -56,11 +53,7 @@
         <mat-expansion-panel class="panel-group" id="panel--symptoms" [expanded]="symptomsPanelState" (opened)="symptomsPanelState = true" (closed)="symptomsPanelState = false">
           <mat-expansion-panel-header [collapsedHeight]="expansionPanelHeight" [expandedHeight]="expansionPanelHeight">
             <mat-panel-title class="panel-title">
-              <span class="container-justified">
-                Symptoms
-                <i class="fas fa-lock private-icon header-icon" matTooltip="private data; do not share"></i>
-                <i class="fas fa-stopwatch embargoed-icon header-icon" matTooltip="embargoed data; do not share"></i>
-              </span>
+              <app-provenance-title title="Symptoms" [embargoed]="true" [private]="true"></app-provenance-title>
             </mat-panel-title>
           </mat-expansion-panel-header>
 
@@ -73,7 +66,7 @@
       <mat-expansion-panel class="panel-group" id="panel--samples" [expanded]="samplesPanelState" (opened)="samplesPanelState = true" (closed)="samplesPanelState = false">
         <mat-expansion-panel-header [collapsedHeight]="expansionPanelHeight" [expandedHeight]="expansionPanelHeight">
           <mat-panel-title class="panel-title">
-            Samples
+            <app-provenance-title title="Samples"></app-provenance-title>
           </mat-panel-title>
         </mat-expansion-panel-header>
 
@@ -86,7 +79,7 @@
         <mat-expansion-panel class="panel-group" id="panel--citations" [expanded]="citationsPanelState" (opened)="citationsPanelState = true" (closed)="citationsPanelState = false">
           <mat-expansion-panel-header [collapsedHeight]="expansionPanelHeight" [expandedHeight]="expansionPanelHeight">
             <mat-panel-title class="panel-title">
-              Citations
+              <app-provenance-title title="Citations"></app-provenance-title>
             </mat-panel-title>
           </mat-expansion-panel-header>
 
@@ -119,7 +112,7 @@
               <div class="expt-type mat-shadow elisa">
                 <svg-icon icon="elisa" class="elisa-icon"></svg-icon>
               </div>
-              ELISA data
+              <app-provenance-title title="ELISA Data"></app-provenance-title>
             </mat-panel-title>
           </mat-expansion-panel-header>
 
@@ -138,10 +131,9 @@
                   <div class="expt-type mat-shadow hla">
                     <svg-icon icon="hla" class="hla-icon"></svg-icon>
                   </div>
-                  HLA sequencing
+                  <app-provenance-title title="HLA Sequencing" [embargoed]="true"></app-provenance-title>
                 </div>
 
-                <i class="fas fa-stopwatch embargoed-icon header-icon" matTooltip="embargoed data; do not share"></i>
               </span>
             </mat-panel-title>
           </mat-expansion-panel-header>
@@ -155,7 +147,7 @@
               <div class="expt-type mat-shadow viralseq">
                 <svg-icon icon="viralseq" class="viralseq-icon"></svg-icon>
               </div>
-              Viral sequencing
+              <app-provenance-title title="Viral Sequencing"></app-provenance-title>
             </mat-panel-title>
           </mat-expansion-panel-header>
           <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles" [patientID]="patient.patientID"></app-patient-viral-seq>
