--- a/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.html
+++ b/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.html
@@ -1,6 +1,13 @@
 <div class="container-justified provenance-title">
-  {{ title }}
-  <div class="container-icons">
+  <div class="container container-title">
+    <div class="expt-type mat-shadow hla" *ngIf="icon">
+      <svg-icon [icon]="icon" [ngClass]="icon + '-icon'"></svg-icon>
+    </div>
+
+    {{ title }}
+  </div>
+
+  <div class="container container-icons">
     <i class="fas fa-lock private-icon header-icon" matTooltip="private data; do not share" *ngIf="private"></i>
     <i class="fas fa-stopwatch embargoed-icon header-icon" matTooltip="embargoed data; do not share" *ngIf="embargoed"></i>
   </div>
