--- a/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.html
+++ b/sample-viewer/src/app/provenance/provenance-title/provenance-title.component.html
@@ -1,6 +1,6 @@
 <div class="container-justified provenance-title">
   <div class="container container-title">
-    <div class="expt-type mat-shadow hla" *ngIf="icon">
+    <div [ngClass]="icon 'expt-type' 'mat-shadow'" *ngIf="icon">
       <svg-icon [icon]="icon" [ngClass]="icon + '-icon'"></svg-icon>
     </div>
 
