remove file header

--- a/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
+++ b/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="hla-files">
-        <h5 class="patient-data">files</h5>
+        <!-- <h5 class="patient-data">files</h5> -->
         <app-file-list datasetID="hla" [patientID]="patient.patientID"></app-file-list>
       </div>
 
