flip dates/calc dates

--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
@@ -15,7 +15,29 @@
   </div>
 
   <div class="container container-right date-group">
-    <div class="container-column container-left hospital-dates" *ngIf="authorized && patient.outcome !== 'contact'">
+    <div class="container-column container-left hospital-spans">
+
+      <ng-container *ngIf="patient.outcome !== 'contact'">
+        <div id="days-onset">
+          <span class="variable-label">days onset:
+          </span>
+          <span class="variable-value" [ngClass]="{'nodata missing-date': !patient.daysOnset}">{{ patient.daysOnset ? (patient.daysOnset) : "unknown"}}</span>
+        </div>
+
+        <div id="evaluation-date">
+          <span class="variable-label">days in hospital:</span>
+          <span class="variable-value" [ngClass]="{'nodata missing-date': !patient.daysInHospital}">{{ patient.daysInHospital ? patient.daysInHospital : "unknown"}}</span>
+        </div>
+      </ng-container>
+
+      <div id="discharge-date">
+        <span class="variable-label">outcome:</span>
+        <span class="variable-value" [ngClass]="{'nodata missing-date': patient.outcome === 'unknown'}">{{ patient.outcome ? patient.outcome : "unknown"}}</span>
+      </div>
+
+    </div>
+
+    <div class="container-column container-right hospital-dates" *ngIf="authorized && patient.outcome !== 'contact'">
 
       <div id="infection-date">
         <i class="fas fa-lock private-icon" matTooltip="private data; do not share"></i>
@@ -39,27 +61,6 @@
     </div>
 
 
-    <div class="container-column container-right hospital-spans">
-
-      <ng-container *ngIf="patient.outcome !== 'contact'">
-        <div id="days-onset">
-          <span class="variable-label">days onset:
-        </span>
-          <span class="variable-value" [ngClass]="{'nodata missing-date': !patient.daysOnset}">{{ patient.daysOnset ? (patient.daysOnset) : "unknown"}}</span>
-        </div>
-
-        <div id="evaluation-date">
-          <span class="variable-label">days in hospital:</span>
-          <span class="variable-value" [ngClass]="{'nodata missing-date': !patient.daysInHospital}">{{ patient.daysInHospital ? patient.daysInHospital : "unknown"}}</span>
-        </div>
-      </ng-container>
-
-      <div id="discharge-date">
-        <span class="variable-label">outcome:</span>
-        <span class="variable-value" [ngClass]="{'nodata missing-date': patient.outcome === 'unknown'}">{{ patient.outcome ? patient.outcome : "unknown"}}</span>
-      </div>
-
-    </div>
   </div>
 
 </div>
