--- a/sample-viewer/src/app/format-citation/format-citation.component.html
+++ b/sample-viewer/src/app/format-citation/format-citation.component.html
@@ -12,7 +12,7 @@
 
         <span id="journal"><i>{{citation.journalNameAbbrev}}</i></span>
 
-        <span id="date" *ngIf="citation.datePublished">{{citation.datePublished | date: "yyyy"}}</span>
+        <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span>
 
       </ng-container>
 
@@ -30,7 +30,7 @@
           </span>
         </span>
         <span id="journal"><i>{{citation.journalName}}</i></span>
-        <span id="date" *ngIf="citation.datePublished">{{citation.datePublished}}</span>, <span id="vol">{{citation.volumeNumber}}</span>, <span id="issue">{{citation.issueNumber}}</span>, <span id="page">{{citation.pagination}}</span>.
+        <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span>, <span id="vol">{{citation.volumeNumber}}</span>, <span id="issue">{{citation.issueNumber}}</span>, <span id="page">{{citation.pagination}}</span>.
         <ng-container [ngTemplateOutlet]="links" [ngTemplateOutletContext]="{ citation: citation}"></ng-container>
       </ng-container>
 
@@ -58,7 +58,7 @@
     </span>
     <span id="journal"><i>{{citation.journalName}}</i></span>
 
-    <span id="date" *ngIf="citation.datePublished">{{citation.datePublished}}</span>, <span id="vol">{{citation.volumeNumber}}</span>, <span id="issue">{{citation.issueNumber}}</span>, <span id="page">{{citation.pagination}}</span>.
+    <span id="date" *ngIf="citation.datePublished">{{ citation.datePublished | date: "yyyy" }}</span>, <span id="vol">{{citation.volumeNumber}}</span>, <span id="issue">{{citation.issueNumber}}</span>, <span id="page">{{citation.pagination}}</span>.
 
   </ng-template>
 
