--- a/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
+++ b/sample-viewer/src/app/patient-page/patient-demographics/patient-demographics.component.html
@@ -33,7 +33,7 @@
 <div class="pregnant" *ngIf="patient.pregnant === true || patient.pregnant === false">
   <i class="fas fa-lock private-icon" matTooltip="private data; do not share"></i>
   <span class="variable-label">pregnant:</span>
-  <span class="variable-value">{{ patient.pregnant === "false" ? "false" : patient.pregnant }}</span>
+  <span class="variable-value">{{ patient.pregnant === "false" ? "no" : patient.pregnant === "true" ? "yes" : "unknown" }}</span>
 </div>
 
 <div class="occupation" *ngIf="patient.occupation">
