--- a/sample-viewer/src/app/patient-page/patient-page.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-page.component.scss
@@ -103,6 +103,7 @@
   color: $grey-400;
   font-size: 1.25em;
   text-transform: uppercase;
+  margin-bottom: 0.5em;
 
   &:not(:first-of-type) {
     margin-left: 50px;
