--- a/sample-viewer/src/styles.scss
+++ b/sample-viewer/src/styles.scss
@@ -88,8 +88,7 @@ a {
     font-weight: 800;
     text-transform: uppercase;
     font-size: 4.5em;
-    margin-top: 0.15em;
-    margin-bottom: 0.15em;
+    margin: 0;
     letter-spacing: 0.15em;
     word-spacing: 0.15em;
     text-shadow: 5px 5px 7px $grey-200;
